--- a/sass/layouts/_hero.scss
+++ b/sass/layouts/_hero.scss
@@ -1,9 +1,9 @@
-.hero-content {
+.hero__content {
     text-align: center;
     flex-grow: 1;
 }
 
-.hero-title {
+.hero__title {
     color: var(--white-color);
 
     font-style: normal;
