--- a/css/main.css
+++ b/css/main.css
@@ -85,7 +85,7 @@ a {
   border-bottom: 1px solid #ECECEC;
 }
 
-.header-container {
+.header-container-new {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -137,7 +137,7 @@ a {
   color: var(--accent-color);
 }
 
-.header-container-new {
+.header-container {
   display: flex;
   align-items: center;
 }
@@ -200,12 +200,12 @@ a {
   fill: currentColor;
 }
 
-.hero-content {
+.hero__content {
   text-align: center;
   flex-grow: 1;
 }
 
-.hero-title {
+.hero__title {
   color: var(--white-color);
   font-style: normal;
   font-weight: 900;
@@ -225,15 +225,16 @@ a {
   padding-top: 200px;
 }
 
-.section {
+.card {
   padding: 94px 0px;
 }
 
-.section-photo {
+.card-list {
   display: flex;
+  gap: 30px;
 }
 
-.section-title {
+.card-list__title {
   margin-bottom: 10px;
   color: var(--title-text-color);
   font-weight: 700;
@@ -243,22 +244,18 @@ a {
   text-transform: uppercase;
 }
 
-.section-photo {
-  gap: 30px;
-}
-
-.item-section {
+.card-list__item {
   width: 270px;
 }
 
-.text {
+.card-list__text {
   font-weight: 400;
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
 }
 
-.item-section-new {
+.card-list__section {
   min-width: 270px;
   height: 120px;
   background-color: var(--background-color-grey);
@@ -269,27 +266,27 @@ a {
   display: flex;
 }
 
-.section-icon {
+.card-list__icon {
   fill: var(--title-text-color);
   width: 70px;
   height: 70px;
 }
 
-.work {
+.picture {
   padding-bottom: 94px;
 }
 
-.work-photo {
+.picture-list {
   display: flex;
   gap: 30px;
 }
 
-.work-img {
+.picture-list__img {
   flex-basis: calc((100% - 60px) / 3);
   position: relative;
 }
 
-.work-title {
+.picture__title {
   margin-bottom: 50px;
   color: var(--title-text-color);
   font-weight: 700;
@@ -300,7 +297,7 @@ a {
   text-align: center;
 }
 
-.work-title-img {
+.picture-list__title {
   position: absolute;
   bottom: 0;
   font-weight: 700;
