--- a/sass/layouts/_sections.scss
+++ b/sass/layouts/_sections.scss
@@ -1,12 +1,13 @@
-.section {
+.card {
     padding: 94px 0px;
 }
 
-.section-photo {
+.card-list {
     display: flex;
+    gap: 30px;
 }
 
-.section-title {
+.card-list__title {
     margin-bottom: 10px;
     color: var(--title-text-color);
     font-weight: 700;
@@ -16,22 +17,19 @@
     text-transform: uppercase;
 }
 
-.section-photo {
-    gap: 30px;
-}
 
-.item-section {
+.card-list__item {
     width: 270px;
 }
 
-.text {
+.card-list__text {
     font-weight: 400;
     font-size: 14px;
     line-height: 1.71;
     letter-spacing: 0.03em;
 }
 
-.item-section-new {
+.card-list__section {
     min-width: 270px;
     height: 120px;
     background-color: var(--background-color-grey);
@@ -43,7 +41,7 @@
 
 }
 
-.section-icon {
+.card-list__icon {
     fill: var(--title-text-color);
     width: 70px;
     height: 70px;
