--- a/sass/layouts/_work.scss
+++ b/sass/layouts/_work.scss
@@ -1,18 +1,18 @@
-.work {
+.picture {
     padding-bottom: 94px;
 }
 
-.work-photo {
+.picture-list {
     display: flex;
     gap: 30px;
 }
 
-.work-img {
+.picture-list__img {
     flex-basis: calc((100% - 60px) / 3);
     position: relative;
 }
 
-.work-title {
+.picture__title {
     margin-bottom: 50px;
     color: var(--title-text-color);
     font-weight: 700;
@@ -23,7 +23,7 @@
     text-align: center;
 }
 
-.work-title-img {
+.picture-list__title {
     position: absolute;
     bottom: 0;
     font-weight: 700;
